[project]
name = "my_library"
description = "This is a library for doing things."
requires-python = ">=3.10"
dynamic = ["dependencies"]
version = "0.1.0"
authors = [
    { name = "Chen Kasirer", email = "kasirer@arch.ethz.ch" }
]

[tool.setuptools.dynamic]
dependencies = {file="requirements.txt"}

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
force-single-line = true